Test Sandbox Project/src/objects/Help_Center_Article__c.object
<CustomObject>
    <description>Monitor the help center&apos;s created &amp; updated article in wordpress</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Id_SF__c</fullName>
        <description>KnowledgeArticleID in Help_Center__kav</description>
        <inlineHelpText>KnowledgeArticleID in Help_Center__kav</inlineHelpText>
        <label>Id_SF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_WP__c</fullName>
        <label>Id WP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Status__c</fullName>
        <description>Salesforce&apos;s Knowledge status</description>
        <inlineHelpText>Salesforce&apos;s Knowledge status</inlineHelpText>
        <label>Knowledge Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slug__c</fullName>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Wordpress post status</description>
        <inlineHelpText>Wordpress post status</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <description>Synchronization status</description>
        <inlineHelpText>Synchronization status</inlineHelpText>
        <label>Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Post Title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Monitor Help Center Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <columns>Id_SF__c</columns>
        <columns>Id_WP__c</columns>
        <columns>Status__c</columns>
        <columns>Sync_Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Help Center Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitor Help Center Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>